# callama

./: .gitignore  Dockerfile  README.md  default_respones.py  docker-compose.yaml  example.env  main.py  model.py  pyproject.toml  requirements.txt
router/: askmodel.py
